--- a/index.css
+++ b/index.css
@@ -1,4 +1,65 @@
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
+    background-image: url("./img/table.png");
+    background-size: cover;
+    font-family: "Exo 2", sans-serif;
+    height: 100vh;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.head {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.remaining {
+    margin: 0;
+    padding-left: 0.5rem;
+}
+
+p,
+h1 {
+    color: #fff;
+    margin: 0;
+    text-align: center;
+}
+
+.cards * {
+    display: block;
+    margin: 10px auto;
+}
+
+img {
+    height: 35vh;
+    border: 1px solid black;
+    border-radius: 5px;
+    width: 11.1rem;
+    height: 15.32rem;
+}
+
+.btn {
+    cursor: pointer;
+}
+
+.new-deck-btn {
+    margin-top: 0.2rem;
+    align-self: flex-start;
+}
+
+.draw-cards-btn {
+    padding: 0.7rem 0;
+}
+
+.draw-cards-btn,
+.new-deck-btn {
+    background-color: yellow;
+    border: 0;
+    margin: 0;
 }
